fix: update header component to display formatted Bitcoin price with USDT

--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -3,9 +3,9 @@
         <mat-icon>menu</mat-icon>
     </button>
     <span class="qa-exchange-rate">
-        ₿
+        1 ₿
         :
-        {{btcPrice | async | currency : 'USD' : 'symbol' : '1.2-2'}}
+        {{btcPrice | async | currency : 'USD' : 'symbol' : '1.2-2'}} USDT
     </span>
     <button mat-icon-button aria-label="Notifications button">
         <mat-icon>notifications_none</mat-icon>
