--- a/frontend/src/app/shared/components/header/header.component.scss
+++ b/frontend/src/app/shared/components/header/header.component.scss
@@ -3,3 +3,11 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.lower-value {
+    background-color: green;
+  }
+
+.higher-value {
+    background-color: red;
+}
