--- a/frontend/src/app/shared/components/table/table.component.html
+++ b/frontend/src/app/shared/components/table/table.component.html
@@ -1,19 +1,21 @@
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
-        <ng-container *ngFor="let column of columns" [matColumnDef]="column.key">
-            <th mat-header-cell *matHeaderCellDef> {{column.label}} </th>
-            <ng-container *ngIf="column.customTemplate">
-                <td mat-cell *matCellDef="let element">
-                    <ng-container 
-                        [ngTemplateOutlet]="column.customTemplate"
-                        [ngTemplateOutletContext]="{element: element, column: column}"
-                    ></ng-container>
-                </td>
+        @for (column of columns; track column.key) {
+            <ng-container [matColumnDef]="column.key">
+                <th mat-header-cell *matHeaderCellDef> {{column.label}} </th>
+                @if (column.customTemplate) {
+                    <td mat-cell *matCellDef="let element">
+                        <ng-container 
+                            [ngTemplateOutlet]="column.customTemplate"
+                            [ngTemplateOutletContext]="{element: element, column: column}"
+                        ></ng-container>
+                    </td>
+                }
+                @if (!column.customTemplate) {
+                    <td mat-cell *matCellDef="let element"> {{element[column.key]}} </td>
+                }
             </ng-container>
-            <ng-container *ngIf="!column.customTemplate">
-                <td mat-cell *matCellDef="let element"> {{element[column.key]}} </td>
-            </ng-container>
-        </ng-container>
+        }
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr
             mat-row 
