--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
 
 :root {
   --color-primary: var(--mat-indigo-500); /* Indigo */
